--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@octokit/rest": "^16.30.1",
     "@rollup/plugin-strip": "^1.3.1",
     "address": "^1.1.2",
+    "almost-equal": "^1.1.0",
     "babel-eslint": "^10.0.1",
     "benchmark": "^2.1.4",
     "browserify": "^16.2.3",
@@ -96,6 +97,7 @@
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-unassert": "^0.3.0",
+    "selenium-webdriver": "^4.0.0-alpha.5",
     "shuffle-seed": "^1.1.6",
     "sinon": "^7.3.2",
     "st": "^1.2.2",
@@ -141,6 +143,7 @@
     "test-suite-clean": "find test/integration/{render,query, expressions}-tests -mindepth 2 -type d -exec test -e \"{}/actual.png\" \\; -not \\( -exec test -e \"{}/style.json\" \\; \\) -print | xargs -t rm -r",
     "test-unit": "build/run-tap --reporter classic --no-coverage test/unit",
     "test-build": "build/run-tap --no-coverage test/build/**/*.test.js",
+    "test-browser": "build/run-tap --reporter spec --no-coverage test/browser/**/*.test.js",
     "test-render": "node --max-old-space-size=2048 test/render.test.js",
     "test-query-node": "node test/query.test.js",
     "watch-query": "testem -f test/integration/testem.js",
